--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
 
 <head>
-  <meta charset='UTF-8'/>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Technical Documentation">
+  <meta name="author" content="Eric Schnackenberg">
   <meta name=viewport content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles.css">
   <title>Technical Documentation</title>
